--- a/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/src/main/webapp/WEB-INF/views/menu.jspx
@@ -12,33 +12,7 @@
     	</menu:category>
     </sec:authorize>
     <sec:authorize url="/**">
-        <menu:category id="c_amistad" z="9gs84phbGTI5fNMpd5R5OCyVVNo=">
-            <menu:item id="i_amistad_new" messageCode="global_menu_new" url="/amistads?form" z="VS0fMH3284HEZy2NPW92p5lpMkQ="/>
-            <menu:item id="i_amistad_list" messageCode="global_menu_list" url="/amistads?page=1&amp;size=${empty param.size ? 10 : param.size}" z="KFipL/Pm8+naVS9nsTvfUIURPXA="/>
-            <menu:item id="fi_amistad_usuario_1" messageCode="global_menu_find" url="/amistads?find=ByUsuario_1&amp;form" z="xTS4vHlOhJZ+vCxQdJ8A+7TYZK0="/>
-            <menu:item id="fi_amistad_usuario_2" messageCode="global_menu_find" url="/amistads?find=ByUsuario_2&amp;form" z="L76RhPwUaB14qEBsyUd/Sg5t3qw="/>
-        </menu:category>
-        <menu:category id="c_usuario" z="g6oG0656PcsmmvUYeBtpgiQROck=">
-             <menu:item id="i_usuario_list" messageCode="global_menu_list" url="/usuarios?page=1&amp;size=${empty param.size ? 10 : param.size}" z="P7ZIPrcTTBR41JYD0QldbYgsZrM="/>
-            <menu:item id="fi_usuario_nombre_usuario" messageCode="global_menu_find" url="/usuarios?find=ByNombre_usuario&amp;form" z="+VjqgJWnYH3iiOtN/0GHiZucAuA="/>
-        </menu:category>
-        <menu:category id="c_notificacion" z="sXCUvctmdFdpLOkPBobjdqTFvgc=">
-            <menu:item id="i_notificacion_new" messageCode="global_menu_new" url="/notificacions?form" z="grmKJIJUWHrBgAYG1kMTHJKJT0A="/>
-            <menu:item id="i_notificacion_list" messageCode="global_menu_list" url="/notificacions?page=1&amp;size=${empty param.size ? 10 : param.size}" z="9Jwc5inillnptAIVyslJ2IS6kDE="/>
-            <menu:item id="fi_notificacion_emisor" messageCode="global_menu_find" url="/notificacions?find=ByEmisor&amp;form" z="0qxQaGTE0p/pp/bEleQ/IypM1eU="/>
-             <menu:item id="fi_notificacion_receptor" messageCode="global_menu_find" url="/notificacions?find=ByReceptor&amp;form" z="6Ac2psNZWOYcpe+JOcAG5nyigAg="/>
-        </menu:category>
-        <menu:category id="c_comentariofoto" z="PKQtAz0JEzC6jvpRS9z2QHbe+O0=">
-            <menu:item id="i_comentariofoto_new" messageCode="global_menu_new" url="/comentariofotoes?form" z="PPbJ/l5VG/2ax/24hj/yDNIG2Kk="/>
-            <menu:item id="i_comentariofoto_list" messageCode="global_menu_list" url="/comentariofotoes?page=1&amp;size=${empty param.size ? 10 : param.size}" z="eqrUgrmuAM+NwWAtPEf2WOXpgDg="/>
-            <menu:item id="fi_comentariofoto_foto" messageCode="global_menu_find" url="/comentariofotoes?find=ByFoto&amp;form" z="B4bc4PiyZi55Q4vVr/07uBRWDDU="/>
-        </menu:category>
-        <menu:category id="c_comentarioalbum" z="5aZ/PRxfLR8dqUExt+idTZqI+D0=">
-            <menu:item id="i_comentarioalbum_new" messageCode="global_menu_new" url="/comentarioalbums?form" z="ZD9n31dyfI/J1ZSc7wunf6kaids="/>
-            <menu:item id="i_comentarioalbum_list" messageCode="global_menu_list" url="/comentarioalbums?page=1&amp;size=${empty param.size ? 10 : param.size}" z="v7BXp0s6RSeQpNJYLfUyjrFMl+A="/>
-            <menu:item id="fi_comentarioalbum_album" messageCode="global_menu_find" url="/comentarioalbums?find=ByAlbum&amp;form" z="Fc7idB0Ig8g0jUQ+pqNR1CKfnNk="/>
-        </menu:category>
-        <menu:category id="c_album" z="xdbKFwZl252vF+vnwh2Ggid2uoM=">
+      	<menu:category id="c_album" z="xdbKFwZl252vF+vnwh2Ggid2uoM=">
             <menu:item id="i_album_new" messageCode="global_menu_new" url="/albums?form" z="I7xVZsEZPxoS6HbPrVhfjUkSKoI="/>
             <menu:item id="i_album_list" messageCode="global_menu_list" url="/albums?page=1&amp;size=${empty param.size ? 10 : param.size}" z="uoWP93BbsZYmmEc2xtJNRTa7k0E="/>
             <menu:item id="fi_album_usuario" messageCode="global_menu_find" url="/albums?find=ByUsuario&amp;form" z="IjV7Qd6y8yL0wrMnbrFxxpWEc/8="/>
@@ -47,6 +21,32 @@
             <menu:item id="i_foto_new" messageCode="global_menu_new" url="/fotoes?form" z="nUbniQGReiz7/MChbwwT05guYTY="/>
             <menu:item id="i_foto_list" messageCode="global_menu_list" url="/fotoes?page=1&amp;size=${empty param.size ? 10 : param.size}" z="qowM48aI+tWyVL3RyRVoA5kUvs8="/>
             <menu:item id="fi_foto_album" messageCode="global_menu_find" url="/fotoes?find=ByAlbum&amp;form" z="ZQnCcJz4MlzkKzmofQfIf/XKY4s="/>
+        </menu:category>
+        <menu:category id="c_amistad" z="9gs84phbGTI5fNMpd5R5OCyVVNo=">
+            <menu:item id="i_amistad_new" messageCode="global_menu_new" url="/amistads?form" z="VS0fMH3284HEZy2NPW92p5lpMkQ="/>
+            <menu:item id="i_amistad_list" messageCode="global_menu_list" url="/amistads?page=1&amp;size=${empty param.size ? 10 : param.size}" z="KFipL/Pm8+naVS9nsTvfUIURPXA="/>
+            <menu:item id="fi_amistad_usuario_1" messageCode="global_menu_find" url="/amistads?find=ByUsuario_1&amp;form" z="xTS4vHlOhJZ+vCxQdJ8A+7TYZK0="/>
+            <menu:item id="fi_amistad_usuario_2" messageCode="global_menu_find" url="/amistads?find=ByUsuario_2&amp;form" z="L76RhPwUaB14qEBsyUd/Sg5t3qw="/>
+        </menu:category>
+        <menu:category id="c_notificacion" z="sXCUvctmdFdpLOkPBobjdqTFvgc=">
+            <menu:item id="i_notificacion_new" messageCode="global_menu_new" url="/notificacions?form" z="grmKJIJUWHrBgAYG1kMTHJKJT0A="/>
+            <menu:item id="i_notificacion_list" messageCode="global_menu_list" url="/notificacions?page=1&amp;size=${empty param.size ? 10 : param.size}" z="9Jwc5inillnptAIVyslJ2IS6kDE="/>
+            <menu:item id="fi_notificacion_emisor" messageCode="global_menu_find" url="/notificacions?find=ByEmisor&amp;form" z="0qxQaGTE0p/pp/bEleQ/IypM1eU="/>
+             <menu:item id="fi_notificacion_receptor" messageCode="global_menu_find" url="/notificacions?find=ByReceptor&amp;form" z="6Ac2psNZWOYcpe+JOcAG5nyigAg="/>
+        </menu:category>
+        <menu:category id="c_usuario" z="g6oG0656PcsmmvUYeBtpgiQROck=" render="false">
+             <menu:item id="i_usuario_list" messageCode="global_menu_list" url="/usuarios?page=1&amp;size=${empty param.size ? 10 : param.size}" z="P7ZIPrcTTBR41JYD0QldbYgsZrM="/>
+            <menu:item id="fi_usuario_nombre_usuario" messageCode="global_menu_find" url="/usuarios?find=ByNombre_usuario&amp;form" z="+VjqgJWnYH3iiOtN/0GHiZucAuA="/>
+        </menu:category>
+        <menu:category id="c_comentariofoto" z="PKQtAz0JEzC6jvpRS9z2QHbe+O0=" render="false">
+            <menu:item id="i_comentariofoto_new" messageCode="global_menu_new" url="/comentariofotoes?form" z="PPbJ/l5VG/2ax/24hj/yDNIG2Kk="/>
+            <menu:item id="i_comentariofoto_list" messageCode="global_menu_list" url="/comentariofotoes?page=1&amp;size=${empty param.size ? 10 : param.size}" z="eqrUgrmuAM+NwWAtPEf2WOXpgDg="/>
+            <menu:item id="fi_comentariofoto_foto" messageCode="global_menu_find" url="/comentariofotoes?find=ByFoto&amp;form" z="B4bc4PiyZi55Q4vVr/07uBRWDDU="/>
+        </menu:category>
+        <menu:category id="c_comentarioalbum" z="5aZ/PRxfLR8dqUExt+idTZqI+D0=" render="false">
+            <menu:item id="i_comentarioalbum_new" messageCode="global_menu_new" url="/comentarioalbums?form" z="ZD9n31dyfI/J1ZSc7wunf6kaids="/>
+            <menu:item id="i_comentarioalbum_list" messageCode="global_menu_list" url="/comentarioalbums?page=1&amp;size=${empty param.size ? 10 : param.size}" z="v7BXp0s6RSeQpNJYLfUyjrFMl+A="/>
+            <menu:item id="fi_comentarioalbum_album" messageCode="global_menu_find" url="/comentarioalbums?find=ByAlbum&amp;form" z="Fc7idB0Ig8g0jUQ+pqNR1CKfnNk="/>
         </menu:category>
    	</sec:authorize>
     </menu:menu>
