--- a/src/main/webapp/WEB-INF/views/fotoes/update.jspx
+++ b/src/main/webapp/WEB-INF/views/fotoes/update.jspx
@@ -3,9 +3,14 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:update id="fu_com_umbook_server_domain_Foto" modelAttribute="foto" path="/fotoes" versionField="Version" z="ON23tKWNnwXQM6acONFE5ZuZuug=">
-        <field:input field="descripcion" id="c_com_umbook_server_domain_Foto_descripcion" z="AD8H/w6lCNgwkWjZoARaE6izOwg="/>
-        <field:input field="ubicacion" id="c_com_umbook_server_domain_Foto_ubicacion" z="cXpYmdConvMfung2V8lUsdDnujQ="/>
+        <field:textarea field="descripcion" id="c_com_umbook_server_domain_Foto_descripcion" z="iLehJhfzcq8qWq46di/rTUYLHew="/>
         <field:simple field="comentarios" id="c_com_umbook_server_domain_Foto_comentarios" messageCode="entity_reference_not_managed" messageCodeAttribute="Comentario Foto" z="XastdqLPwRBt6fMDB54s37Rd55w="/>
         <field:select field="album" id="c_com_umbook_server_domain_Foto_album" itemValue="id" items="${albums}" path="/albums" z="LKVdypyDHxm/r+MzV0hduRsNli4="/>
+        <field:input field="nombre" id="c_com_umbook_server_domain_Foto_nombre" max="30" z="XPhWq3PMRYtKTdUtyXZf2JYJzN4="/>
+        <field:input field="nombre_archivo" id="c_com_umbook_server_domain_Foto_nombre_archivo" z="9gcm2EzZNfPLc/CrS4CkzVmnniI="/>
+        <field:input field="contenido" id="c_com_umbook_server_domain_Foto_contenido" z="at4c/7WEbGLl137eWiOgNfFkTE8="/>
+        <field:input field="tipo_contenido" id="c_com_umbook_server_domain_Foto_tipo_contenido" z="TtdZRXjW/twuUj1Cbrwvy4tUTcM="/>
+        <field:input field="tamano" id="c_com_umbook_server_domain_Foto_tamano" validationMessageCode="field_invalid_integer" z="sjmehPpUyaEFJApPq2ohnW4Jb7g="/>
+        <field:textarea field="url" id="c_com_umbook_server_domain_Foto_url" z="iwdVyqZnfzDcXHAifhxRmGlanKk="/>
     </form:update>
 </div>
