--- a/src/main/webapp/WEB-INF/views/footer.jspx
+++ b/src/main/webapp/WEB-INF/views/footer.jspx
@@ -24,6 +24,7 @@
     <spring:message code="global_language"/>
     <c:out value=": "/>
   <util:language label="English" locale="en"/>
+    <util:language label="Espanol" locale="es"/>
     </span>
   <util:theme/>
 
